--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  text-align:center;
+}
+.nav_bar{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:5px;
+}
+.nav_bar a{
+  text-align:center;
+  padding:0 10px 0 10px;
+  text-decoration:none;
+  border:1px solid white;
+  background-color:grey;
+  
+  
+}
+figure{
+  align-items:center;
+  
+}
+img{
+  align:center;
+}
+figcaption{
+  font-size:8px;
+  text-align:center;
+}
+#featured-property p{
+  text-align:center;
+  width:800px;
+}
+div{
+  float:left;
+  align-items:center;
+  background-color:red;
+  width:25%;
+}
+
+
